--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Bryan Dela Cruz <bryanmdlx@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4.11"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.81"
