--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ libc = "0.2.81"
 nix = "0.19.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
+vigem-client = {path = "../vigem-client"}
 
 [target.'cfg(target_os = "macos")'.dependencies]
 
