--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,18 @@ version = "0.1.0"
 authors = ["Bryan Dela Cruz <bryanmdlx@gmail.com>"]
 edition = "2018"
 
+[features]
+default = []
+async = ["tokio"]
+
 [dependencies]
 log = "0.4.11"
+
+[dependencies.tokio]
+version = "0.3"
+optional = true
+default-features = false
+features = ["sync", "rt-multi-thread", "macros"]
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.81"
